https://developer.android.com/codelabs/android-preferences-datastore#4 - added this step to gradle

--- a/android-datastore-master/app/build.gradle
+++ b/android-datastore-master/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$supportLibVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
     implementation "com.google.android.material:material:$materialVersion"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha01"
 
     // kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
